Sat Jan  4 02:10:32 CET 2014  John Tytgat  <John.Tytgat@aaug.net>

	* README: Upstream svn URL got changed from
	http://elftoolchain.svn.sourceforge.net/svnroot/elftoolchain/trunk
	to https://svn.code.sf.net/p/elftoolchain/code/trunk.

Wed Jan  1 14:05:47 CET 2014  John Tytgat  <John.Tytgat@aaug.net>

	* current-trunk/configure.ac (AM_PROG_AR): Make its use automake 1.11.1
	compatible.

Mon Dec 23 17:07:09 CET 2013  John Tytgat  <John.Tytgat@aaug.net>

	* current-trunk: Merged from upstream-trunk.

Mon Dec 23 16:58:21 CET 2013  John Tytgat  <John.Tytgat@aaug.net>

	* upstream-trunk: Sync'd with
	https://svn.code.sf.net/p/elftoolchain/code/trunk@r2974

Sun Dec 22 16:28:26 CET 2013  John Tytgat  <John.Tytgat@aaug.net>

	current-trunk:
	* libdwarf/libdwarf_frame.c (_dwarf_frame_convert_inst): Remove trivial
	dead variable assigment.
	* libelf/elf_update.c (_libelf_write_elf): Likewise.
	* libelf/libelf_ar.c (GET_WORD): Likewise.
	(_libelf_ar_process_svr4_symtab): Likewise.
	* libelftc/libelftc_dem_arm.c (read_func_ptr): Likewise.
	* libelftc/libelftc_dem_gnu2.c (read_func_ptr): Likewise.
	Sent patch upstream as:
	http://sourceforge.net/apps/trac/elftoolchain/ticket/432

Sun Dec 22 16:21:10 CET 2013  John Tytgat  <John.Tytgat@aaug.net>

	current-trunk:
	* libelftc/elftc_copyfile.c (elftc_copyfile): Fix memory leak when
	read fails.  Change test on mmap failure.
	Sent patch upstream as:
	http://sourceforge.net/apps/trac/elftoolchain/ticket/437

Sun Dec 22 16:16:08 CET 2013  John Tytgat  <John.Tytgat@aaug.net>

	current-trunk:
	* libdwarf/libdwarf_macinfo.c (_dwarf_macinfo_parse): Don't access
	fileindex out-of-bounds for unmatched (DW_MACINFO_start_file,
	DW_MACINFO_end_file) pairs.
	Sent patch upstream as:
	http://sourceforge.net/apps/trac/elftoolchain/ticket/436

Sun Dec 22 16:11:09 CET 2013  John Tytgat  <John.Tytgat@aaug.net>

	current-trunk:
	* libdwarf/dwarf_pro_lineno.c (dwarf_add_line_entry): Don't do a