@@ -1,3 +1,12 @@
+Mon Jan 27 22:40:41 CET 2014  John Tytgat  <John.Tytgat@aaug.net>
+
+	* current-trunk: Merged from upstream-trunk.
+
+Mon Jan 27 22:37:09 CET 2014  John Tytgat  <John.Tytgat@aaug.net>
+
+	* upstream-trunk: Sync'd with
+	https://svn.code.sf.net/p/elftoolchain/code/trunk@r2980
+
 Sat Jan  4 02:10:32 CET 2014  John Tytgat  <John.Tytgat@aaug.net>
 
 	* README: Upstream svn URL got changed from
